--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,24 +1,24 @@
 upstream puma {
-  server unix:///home/moviehdkh/moviehdkh/shared/tmp/sockets/moviehdkh-puma.sock;
+  server unix:///home/deploy/cafe_test/shared/tmp/sockets/deploy-puma.sock;
 }
 
 server {
   listen 80 default_server;
 #  listen 443;
-  server_name 172.31.18.5;
+  server_name 34.211.30.102;
   return 301 https://$server_name$request_uri;
 }
 
 server {
-  listen 443 default ssl;
+ # listen 443 default ssl;
 
 #  ssl on;
 #  ssl_certificate /home/certificate.pem;
 #  ssl_certificate_key /home/private_key.pem;
 
-  root /home/moviehdkh/moviehdkh/current/public;
-  access_log /home/moviehdkh/moviehdkh/current/log/nginx.access.log;
-  error_log /home/moviehdkh/moviehdkh/current/log/nginx.error.log info;
+  root /home/deploy/deploy/current/public;
+  access_log /home/deploy/cafe_test/current/log/nginx.access.log;
+  error_log /home/deploy/cafe_test/current/log/nginx.error.log info;
 
   location ^~ /assets/ {
     gzip_static on;
