--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,12 +1,12 @@
 upstream puma {
-  server unix:///home/deploy/cafe_test/shared/tmp/sockets/deploy-puma.sock;
+  server unix:///home/deploy/cafe_test/shared/tmp/sockets/cafe_test-puma.sock;
 }
 
 server {
   listen 80 default_server;
 #  listen 443;
   server_name 34.211.30.102;
-  return 301 https://$server_name$request_uri;
+  return 301 http://$server_name$request_uri;
 }
 
 server {
