--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,14 +2,11 @@ upstream puma {
   server unix:///home/deploy/cafe_test/shared/tmp/sockets/cafe_test-puma.sock;
 }
 
-server {
-  listen 80 default_server;
-
-  server_name 34.211.30.102;
-  return 301 http://$server_name$request_uri;
-}
 
 server {
+  listen 80 default_server deferred;
+  server_name hocrubyonrails.com;
+
   root /home/deploy/cafe_test/current/public;
   access_log /home/deploy/cafe_test/current/log/nginx.access.log;
   error_log /home/deploy/cafe_test/current/log/nginx.error.log info;
